[package]
name = "libpid"
version = "0.3.0"
edition = "2021"
license = "MPL-2.0"
description = "A rust crate library that implements a PID controller."
homepage = "https://github.com/saronic-technologies/libpid-rs"
repository = "https://github.com/saronic-technologies/libpid-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"

[dev-dependencies]
proptest = "1.3.1"
serial_test = "3.0.0"
test-log = "0.2.14"

